# hoodie_sim_v2

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  ECHO Architecture.drawio  LICENSE  README.md  SUMMARY.md  agentdb.rvf  audit-request.txt  audit-trigger-20260716b.txt  audit-trigger-v2.txt  audit-trigger.txt  claude-flow.config.json  config.yml  constitution.md  dahoodie.tex  debug_trace.py  delayed_reward_runtime.py  figure10_validation.py  main.py  mrs_config.json  opencode.jsonc  paper_contract.py  phase1_trace_validation.py  phase1_tracing.py  phase2_mechanisms.py  phase2_validation.py  phase3_fidelity_audit.py  phase4_validation.py  phase5_generate_figures.py  pyproject.toml  requirements.txt  reward_contract.py  run_audit.py  run_pilot_with_diagnostic.py  ruvector.db  temp_head.txt  temp_middle.txt  temp_tail.txt  (+1 more)
.claude/: memory.db  settings.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.specify/: feature.json
analysis/: __init__.py  hoodie_action_distribution.py
artifacts/: chatgpt_source_export_trigger.txt
config/: paper_table4_contract.json
configs/: hoodie_reproduction.json  runtime_model.yml  simulation.yaml
decision_makers/: __init__.py  agent.py  baselines.py  decision_maker_base.py  dummies.py  rule_based.py
docs/: DECISIONS.md  DEPLOYMENT.md  GRAPHIFY_USAGE.md  HOODIE_REDESIGN_STATUS.md  NEXT_ACTIONS.md  OPEN_TASKS.md  ORCHESTRA_PLAN.md  PAPER_FAITHFUL_PROFILE_DECISION.md  PROJECT_CONTEXT.md  PROJECT_DECISIONS.md  SESSION_CHECKPOINTS.md  TESTING.md  cleanup-training-audit.md  hoodie_reproduction_pipeline.md  phase1-runtime-tracing.md  phase2_mechanism_repair.md  phase2_two_stage_action_model.md  phase3_2_runtime_paper_state.md  phase3_fidelity_audit.md  phase4_200_episode_validation.md  phase5_figure_generation.md  reproducibility.md  tracking-policy.md
engine/: __init__.py  execution_engine.py
environment/: action_model.py  cloud.py  environment.py  matchmaker.py  paper_horizon.py  queues.py  server.py  task.py  task_generator.py
evaluation/: __init__.py  ablation_suite.py  baseline_runner.py  evaluation_pipeline.py  experimental_design.py  experimental_layers.py  fairness_validator.py  hypotheses.py  paper_metrics.py  statistical_tests.py
hoodie/: __init__.py
hyperparameters/: __main__.py  hyperparameters.json
lr_schedulers/: __init__.py
reports/: feature_086_system_model_fidelity_final_review.md
research/: ECHO_evaluation_spec.md  ECHO_method_spec.md  ECHO_png_export_authorization.md  ECHO_topology_authorization.md  ECHO_topology_authorization_v2.md
resources/: ECHO_multi_agent_phase_runbook.md
scripts/: 03_build_baseline_model_v2.py  04_build_single_pile_model_v2.py  README_figure10_validation.md  aggregate_figure10_sweep_results.py  audit_learning_path_collapse.py  audit_real_trainer_replay_flow.py  changed-files-summary.sh  check_hoodie_runtime_checkpoint_format.py  check_hoodie_small_real_training_smoke_preflight.py  check_hoodie_training_preflight.py  check_hoodie_validation_runner_checkpoint_integration.py  export_figure_10.py  export_figure_11.py  export_figure_8.py  export_figure_9.py  generate_smoke_configs.py  graphify-query-safe.sh  plot_figure10_from_validation.py  prepare_figure10_baseline_sweeps.py  prepare_figure10_baseline_validation.py  project-status-summary.sh  run_echo_hoodie_paired_pilot.py  run_figure10_validation.py  run_figure_9_only.py  run_figures_8_11_50ep.py  run_figures_8_11_validation.py  run_hoodie_base_paper_metric_experiment.py  run_hoodie_bounded_small_real_training_smoke.py  run_hoodie_checkpointed_evaluation_smoke.py  run_hoodie_controlled_trained_checkpoint_loading_smoke.py  run_hoodie_paper_scenario_action_distribution_wiring_hardening.py  run_hoodie_reproduction_pipeline.py  run_hoodie_smoke_checkpoint_evaluation_metrics_hardening.py  run_hoodie_tiny_checkpoint_smoke.py  run_hoodie_trained_checkpoint_evaluation_wiring_smoke.py  run_hoodie_validation_runner_checkpoint_smoke.py  run_hoodie_validation_runner_execution_smoke.py  secret-safe-inspection.sh  smoke_paper_trace_completion.py  smoke_test_paper_faithful_profile.py  (+5 more)
simulation/: __init__.py  pipeline.py  run_paper_smoke.py
spec/: euls_execution_compiler.md
src/: __init__.py  cli.py  data_loader.py  echo_action_space.py  echo_ert.py  echo_queue_ordering.py  echo_types.py  run_pipeline.py  seed.py
tests/: conftest.py  test_dal_agent_layer.py  test_ddqn.py  test_delayed_reward_pairing.py  test_figure10_plotting.py  (+55 more)
(+4028 files in other folders)
