[build-system]
requires = ["setuptools>=81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoodie-sim-v2"
version = "0.3.0"
description = "Scientifically reproducible HOODIE training, evaluation, and Figures 8-11 pipeline"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
  "gym>=0.26,<0.27",
  "matplotlib>=3.8",
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "tensordict>=0.6",
  "torch>=2.2",
  "torchrl>=0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
hoodie-experiments = "src.hoodie.experiments.cli:main"
hoodie-smoke = "hoodie.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "hoodie*"]
exclude = ["tests*", "tests_historical*", "artifacts*", "resources*", "runs*"]

[tool.pytest.ini_options]
testpaths = [
  "tests_supported/hoodie",
  "tests/unit",
  "tests/integration",
  "tests/acceptance",
]
norecursedirs = [
  ".git",
  ".venv",
  "venv",
  "build",
  "dist",
  "artifacts",
  "resources",
  "runs",
  "tests_historical",
]
addopts = "-ra --strict-markers"
markers = [
  "acceptance: end-to-end scientific acceptance checks",
  "integration: multi-module integration checks",
  "requires_cuda: requires a CUDA backend",
  "requires_mps: requires an Apple MPS backend",
  "slow: intentionally long-running validation",
]
