[build-system]
requires = ["setuptools>=81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoodie-sim-v2"
version = "0.3.1"
description = "Scientifically reproducible HOODIE training, evaluation, and Figures 8-11 pipeline"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
  "gym>=0.26,<0.27",
  "matplotlib>=3.8",
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "tensordict>=0.6",
  "torch>=2.2",
  "torchrl>=0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
# The active runtime still uses the repository's established `src.*` package
# namespace. Keep this entry point aligned with that tested import surface until
# the scientific run is complete; do not partially migrate packaging while a
# campaign is being validated or executed.
hoodie-experiments = "src.hoodie.experiments.cli:main"

[tool.setuptools]
# Compatibility layout: the repository contains a real Python package named
# `src` plus the public `hoodie` forwarding package. Installing both avoids the
# broken half-migration where `hoodie` is installed but `src.agents`,
# `src.environment`, and the executor dependencies are not.
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "hoodie*"]
exclude = ["tests*", "tests_historical*", "artifacts*", "resources*", "runs*"]

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
  "tests/integration",
  "tests/acceptance",
]
addopts = "-ra --strict-markers"
markers = [
  "acceptance: end-to-end scientific acceptance checks",
  "integration: multi-module integration checks",
  "requires_cuda: requires a CUDA backend",
  "requires_mps: requires an Apple MPS backend",
  "slow: intentionally long-running validation",
]
